feat: se corrige el endpoint para versionar los planes y se actualiza la reformulacion correctamente https://github.com/udistrital/planeacion_cliente/issues/1254
